# solstone-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  LICENSE  Makefile  README.md  pyproject.toml
contrib/: solstone-linux.service  solstone-tray.desktop
contrib/icons/hicolor/: index.theme
scripts/: extract_changelog.sh  release.sh
src/solstone_linux/: __init__.py  activity.py  audio_detect.py  audio_mute.py  audio_recorder.py  chat_bridge.py  cli.py  config.py  dbus_service.py  dbusmenu.py  doctor.py  install_guard.py  monitor_positions.py  observer.py  recovery.py  screencast.py  session_env.py  sni.py  solstone-linux.service.in  streams.py  sync.py  sync_health.py  tray.py  upload.py
tests/: conftest.py  test_activity.py  test_chat_bridge.py  test_cli.py  test_config.py  test_dbus_service.py  test_dbus_service_stream_health.py  test_dbusmenu.py  test_doctor.py  test_extract_changelog.py  test_install_guard.py  test_monitor_positions.py  test_observer.py  test_observer_consecutive_silent_escalation.py  test_observer_emits_stream_silent_event.py  test_observer_liveness_polling.py  test_observer_notify_send.py  test_screencast.py  test_screencast_stop_filters_silent_streams.py  test_session_env.py  test_streams.py  test_sync.py  test_sync_health.py  test_sync_health_surfaces.py  test_tray.py  test_upload.py
